# release-system

./: .pre-commit-config.yaml  README.md  pyproject.toml
cli/: README.md  pyproject.toml
cli/textcli/: cli.py
cli/texttools/: __init__.py
cli/texttools/Compiler/: Compiler.py  RegexCompiler.py  __init__.py
cli/texttools/Validator/: RegexValidator.py  Validator.py  __init__.py
cli/texttools/cli/: __init__.py  cli.py
viewer/: LICENSE  README.md  pyproject.toml
viewer/textviewer/: __init__.py
viewer/textviewer/cli/: __init__.py  cli.py
viewer/textviewer/page/: __init__.py
viewer/textviewer/page/generator/: PageGenerator.py  __init__.py
