[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rzo-textviewer"
version = "0.0.1"
description = "A small command line tool to generate pages."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "renzoca" }]
keywords = ["text viewer"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.optional-dependencies]
dev = ["pre-commit==3.4.0"]

[project.urls]
Repository = "https://github.com/renz0ca/release-system"

[project.scripts]
generate-page = "textviewer.cli:generate_cli"

[tool.setuptools.packages.find]
include = ["textviewer"]

[tool.ruff]
select = ["E", "F", "W", "I"]
